# hypertext

./: .gitattributes  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
.github/workflows/: cmake.yml  main.yml
CMake/: hypertextConfig.cmake.in
Include/: hypertext.h
Sources/: Creation.c  Fetching.c  Instance.c  Internals.h  Modifying.c  Output.c  Parsing.c  Utilities.c  Utilities.h
Sources/Windows/: Manifest.rc  Manifest.rc.in  Manifest.xml
Tests/Creation/: Request.c  Response.c
Tests/Parsing/: Request.c  Response.c
